# semic

./: .readthedocs.yaml  LICENSE  README.md  REFERENCES.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py  testing.ipynb
.github/workflows/: codeql-analysis.yml
docs/source/: conf.py  index.rst  usage.rst
semic/: dynamics.py  fundamentals.py
semic/bjt/: bipolar_junction_transistor.py  bjt.py
semic/carriers/: carrier_extension.py  carrier_transport.py  density_states.py  dist_functions.py  equilibrium_density.py  microscopic_transport.py
semic/characterization/: cv_measurements.py
semic/constants/: constants.py
semic/diodes/: diode.py
semic/fets/: jfet.py  mesfet.py  mosfet.py
semic/interfaces/: schottky.py
semic/materials/: __init__.py  alas.py  algaas.py  aln.py  alp.py  alsb.py  cds.py  cdse.py  cdte.py  gaas.py  gaassb.py  gainas.py  gainasp.py  gainsb.py  gap.py  hgcdte.py  hgs.py  inalas.py  inas.py  ingaas.py  ingan.py  inn.py  inp.py  material_properties.csv  material_properties.xlsx  materials.py  mgo.py  pbs.py  pbse.py  semiconductor.py  si.py  zns.py
semic/math/: coordinate.py  fdint.py  functions.py
semic/optoelectronic/: __init__.py
semic/plot/: plots.py
semic/quantum/: __init__.py  quantum.py
semic/structure/: bandstructure.py  dynamics.py
semicpy/: fundamentals.py
semicpy/bjt/: bjt.py
semicpy/carriers/: carrier_extension.py  carrier_transport.py  density_states.py  dist_functions.py  equilibrium_density.py  microscopic_transport.py
src/: __init__.py  dynamics.py  elements.py  fundamentals.py  materials.py
(+68 files in other folders)
