[metadata]
name = semic-pkg-nxs169230
version = 0.0.1
author = Nithin Kumar Santha Kumar
author_email = nxs169230@utdallas.edu
description = A package for semiconductor physics and calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nxs169230/semic
project_urls =
   Bug Tracker = https://github.com/nxs169230/semic/issues
classifiers =
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
   Operating System :: OS Independent

[options]
package_dir = 
   = src
packages = find:
python_requires = >=3.6

[option.packages.find]
where = src